From 234d167 (master):
=====================

In scripts/replicatesim.py,

(*) Remove unused import of h5py
(*) Restructure __main__ block to call a function replicate() by
passing the parameters
(*) Insert an option to go into debug mode before calling replicate()

In examples/simparms/replicatesim.yaml,

(*) Add option to enter debug mode before calling replicate()

From bcad114 (closure-adv):
==========================

In prisim/bispectrum_phase.py,

(*) In member function smooth_in_tbins() of class ClosurePhase, update
handling of LST bins and weights when specified LST bin size is
smaller than the LST resolution in the data
(*) In member function subsample_differencing() of class ClosurePhase,
update handling of LST bins and weights when specified LST bin size is
smaller than the LST resolution in the data

From 683604f (closure-adv):
==========================

In prisim/bispectrum_phase.py,

(*) In member function smooth_in_tbins() of class ClosurePhase, update
handling of the case when the specified LST bin size is smaller than
the LST resolution in the data, namely, do no binning and pass the
existing bin size, and other keys

From f11e09b (closure-adv):
==========================

In prisim/bispectrum_phase.py,

(*) In member function subsample_differencing() of class ClosurePhase,
handle the computing of eicp_diff when specified LST bin size is
smaller than the LST resolution in the data, namely, do no binning
and pass the existing bin size, and other keys

From bc5041b (closure-adv):
==========================

In prisim/bispectrum_phase.py,

(*) In member function smooth_in_tbins() of class ClosurePhase, handle
the case when the specified LST bin size is smaller than the LST
resolution in the data, namely, do no binning and pass the existing
bin size, and other keys
(*) In member function subsample_differencing() of class ClosurePhase, 
handle the case when the specified LST bin size is smaller than the 